Mentoring/P2_magnan_benoit/style.css
/* REGLAGES GLOBAUX */
*{
    margin: 0;
    padding: 0;
    border: 0;
    line-height: normal;
    font-family: 'Raleway';
    color: black;
}

h1 {
    font-size: 1.4em;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

a {
    text-decoration: none;
    color: black;
}

a:hover, button:hover{
    cursor: pointer;
}

/* REGLAGES - HEADER */
.logo img {
    margin-top: -6px;
}

.container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  width: 100%;
}

.element {
    display: flex;
}

.element a {
    display: flex;
    align-items: center;
}

.navBar {
    width: 100%;
    padding: 22.5px;
}

.rightNav {
    flex: 1;
}

.rightNav a {
    color: #0065FC;
    font-weight: bold;
}

.leftNav {
    flex: 3;
}

/* REGLAGES - FLEXBOX HEBERGEMENTS ET ACTIVITES */
header .element:nth-child(2)
{
    order: 3;
}
.movingNav {
    width: 100%;
}

.movingNav a {
    width: 100%;
    padding: 13px;
    justify-content: center;
    border-bottom: 3px solid #f2f2f2;
}

.movingNav a:hover {
    color: #0065FC;
    border-bottom: 3px solid #0065FC;
}

.movingNav a:active {
    color: #0065FC;
    border-bottom: 3px solid #0065FC;
}

/* REGLAGES - SECTION */
section {
    padding: 25px 5%;;
}

section > * {
    padding: 5px 0;
}

#populaires {
    background-color: #f2f2f2;
}

/* REGLAGES - RECHERCHE */
.search {
    display: flex;
    margin: 20px 0;
}

.search i {
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    font-size: 1.2em;
}

.fa-map-marker-alt {
    min-width: 50px;
    max-width: 50px;
    background: #f2f2f2;
    border-radius: 30% 0 0 30%;
}
  
.searchBar {
    width: 75%;
    height: 50px;
    border: 1px solid #f2f2f2;
    font-size: 1em;
    padding-left: 5%;
}

.searchBar:focus{
    font-weight: bold;
    color: black;
}

.searchButton {
    min-width: 50px;
    max-width: 50px;
    margin-left: -10px;
    border-radius: 30%;
    background-color: #0065FC;
    color: #fff;
    cursor: pointer;
}

button p{
    display: none;
}

.searchButton i{color:white;}

/* REGLAGES - FILTRES */
 #searchEngine .container {
    width: 100%;
    margin:0;
    padding:0; 
    justify-content: space-between;
}

.filtre {
    margin: 6px 0px;
}

.filtre:hover > p {
    background-color: #DEEBFF;
    border: 2px solid #DEEBFF;
    color: #0065fc;
}

.filtre:hover > i {
    background-color: #DEEBFF;
    color: #0065fc;
}

.filtre i{
    background-color: #DEEBFF;
    border-radius: 50%;
    min-width: 50px;
    max-width: 50px;
    height: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #0065fc;
    z-index: 1;
    font-size: 1.2em;
}

.filtre p {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 15px 0 55px;
    margin-left: -46px;
    height: 46px;
    border: 2px solid #d9d9d9;
    border-radius: 50px;
    font-weight: bold;
}

/* REGLAGES - INFO */
.info {
    display: flex;
    margin: 15px 0 0 0;
}

.info i{
    border-radius: 50%;
    border: 1px solid #d2d2d2;
    min-width: 20px;
    max-width: 20px;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #0065fc;
    font-size: 0.65em;
}

.info p {
    padding-left: 3%;
}

/* REGLAGES - POPULAIRE */
#populaires .element {
    width: 100%;
    justify-content: space-between;
}

.titre {
    padding: 10px 0;
}

.fa-chart-line {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.3em;
}

/* REGLAGES - CARTE */
.card {
    display: flex;
    margin: 10px auto;
    height: 150px;
    background-color: white;
    border-radius: 15px;
    padding: 5px;
    overflow: hidden;
    box-shadow: 0px 0px 10px #d2d2d2;
}

.card:hover {
    box-shadow: 0px 0px 20px  #b6b5b5;
}

.photo {
    width: 45%;
}

.photo img {
    width: 100%;
    height: 100%;
    border-radius: 15px 0 0 15px;
    object-fit: cover;
    overflow: hidden;
}

.description {
    position: relative;
    width: 55%;
    padding: 5%;
    border-radius: 0 15px 15px 0;
}

.description p {
    line-height: 2;
}

.rating {
    position: absolute;
    bottom: 12px;
}

.rating i {
    font-size: 0.8em;
    color: #0065FC;
}

.rating .grey {
    color: #d2d2d2;
}

/* REGLAGES - CARTE HEBERGEMENT */
.hebergement {
    height: 200px;
    flex-wrap: wrap;
}

.hebergement .element {
    width: 100%;
    flex-wrap: wrap;
}

.hebergement .photo {
    min-width: 100%;
    height: 115px;
}

.hebergement .photo img {
    border-radius: 15px 15px 0 0 ;
    object-fit: cover;
    overflow: hidden;
}

.hebergement .description {
    width:100%;
    height:100%;
    padding: 10px;
}

.hebergement .rating {
    position: relative;
    margin: 10px auto;
}
/* REGLAGES - MORE */
.more {
    margin: 35px auto 0px;
    background-color: transparent;
    font-size: 1em;
    font-weight: bold;
}


/* REGLAGES - CARTE ACTIVITES */
.card.activites {
    height: 190px;
    flex-wrap: wrap;
    padding: 0px;
    margin: 25px auto;
}

.activites .photo {
    height: 135px;
}

.activites .description {
    height: auto;
}



/* FOOTER */
footer {
    background-color: #f2f2f2;
    padding: 30px;
}

footer li {
    padding: 5px 0px;
}

